--- a/public/partial-views/login.html
+++ b/public/partial-views/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="container-login" class="container">
 
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
@@ -6,7 +6,7 @@
             <h1 class="text-center login-title">Login </h1>
 
             <div class="account-wall">
-                <form class="form-signin" name="formSignin"  ng-submit="login()">
+                <form class="form-signin" name="formSignin"  ng-submit="login()" novalidate>
 
                 	<input type="text" name="username" ng-model="username" class="form-control" placeholder="Usuario" required autofocus>
 
@@ -28,9 +28,7 @@
             </div>
         </div>
     </div>
-
-	<div class="row">
-	username: "user",
-	password: "password",
-	</div>	
 </div>
+
+<!-- username: "user",
+password: "password", -->
