--- a/public/partial-views/post.html
+++ b/public/partial-views/post.html
@@ -6,33 +6,32 @@
     	<input type="checkbox" ng-model="createEnabled" ng-init="createEnabled = true" id="createEnabled"> 
 
     	<div class="col-sm-12" ng-show="createEnabled">
-    		<form action="" ng-submit="createPost()">
-	    		<input ng-model="post.title" class="col-sm-12" required></input>
-	    		<hr>
-	    		<textarea ng-model="post.content" class="col-sm-12"></textarea>
-	    		<!-- <text-angular ng-model="post.content" class="col-sm-12"></text-angular> -->
-	    		<button type="submit" class="btn btn-primary">GUARDAR</button>
-    		</form>
+    		<input ng-model="post.title" class="col-sm-12" required></input>
+    		<hr>
+    		<text-angular ng-model="post.content" class="col-sm-12"></text-angular>
+    		<button type="submit" class="btn btn-primary" ng-click="createPost()">GUARDAR</button>
     	</div>
 
 	</div>
 </div>
 
 
-<table class="table movietable">
+
+<table class="table table-striped table-hover movietable">
     <tr>
         <td>
         	<h3>Todos los post</h3>
         </td>
     </tr>
+
     <tr>
-        <td>
+        <td style="background:gray" colspan="2">
         	<label for="search">Buscar</label>
         	<input type="text" ng-model="searchText">
         </td>
     </tr>
+
     <tr ng-repeat="post in posts | filter: searchText | orderBy : '-title'">
-    <!-- <tr ng-repeat="post in posts | filter: searchText "> -->
         <td width="80%">{{post.title}}</td>
         <td width="20%">
             <a class="btn btn-primary" ui-sref="post_detail({id : post._id})">Ver detalle</a>
