hide create post.html

--- a/public/partial-views/post.html
+++ b/public/partial-views/post.html
@@ -3,7 +3,7 @@
 	<div class="row">
     	
     	<label for="createEnabled">CREAR UN POST</label>
-    	<input type="checkbox" ng-model="createEnabled" ng-init="createEnabled = true" id="createEnabled"> 
+    	<input type="checkbox" ng-model="createEnabled" ng-init="createEnabled = false" id="createEnabled"> 
 
     	<div class="col-sm-12" ng-show="createEnabled">
     		<input ng-model="post.title" class="col-sm-12" required></input>
